--- a/index.html
+++ b/index.html
@@ -1,9 +1,210 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biker Zone</title>
+    <!-- Tailwind and Daisy UI CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google font poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Little CSS -->
+    <style>
+      .font-poppins {
+        font-family: "Poppins", sans-serif;
+      }
+    </style>
+    <!-- Customize Tailwind Config File -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              "bike-primary": "#E76F51",
+              "bike-primary-bg": "rgba(231, 111, 81, 0.10)",
+              "text-description-color": "rgba(0, 0, 0, 0.80)",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body></body>
+  <body class="font-poppins">
+    <header class="container mx-auto px-4">
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <div class="dropdown">
+              <label tabindex="0" class="btn btn-ghost lg:hidden"> </label>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 text-base shadow bg-base-100 rounded-box w-52"
+              >
+                <li><a>Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>News</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <a class="btn btn-ghost normal-case text-2xl lg:text-4xl font-bold"
+              >Bike Dekho</a
+            >
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1 text-base font-medium">
+              <li><a>Home</a></li>
+              <li><a>Shop</a></li>
+              <li><a>News</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a class="btn bg-bike-primary text-white font-bold hover:text-black"
+              >Button</a
+            >
+          </div>
+        </div>
+      </nav>
+      <!-- Slider or Carosoul -->
+      <div
+        class="carousel w-full bg-bike-primary-bg rounded-md h-[700px] lg:h-[550px] lg:mt-14"
+      >
+        <!-- Slide One -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div
+            class="flex flex-col lg:flex-row lg:gap-20 p-10 lg:p-28 items-center"
+          >
+            <div class="space-y-7 lg:w-1/2">
+              <h1 class="text-6xl text-black font-bold lg:leading-[75px]">
+                Ride-on R15 V4 with Smile
+              </h1>
+              <p class="text-text-description-color leading-7">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button
+                class="btn bg-bike-primary text-white normal-case font-semibold hover:text-black"
+              >
+                Purchase
+              </button>
+            </div>
+            <div class="lg:w-1/2">
+              <img src="/images/slider/bike1.png" class="lg:w-3/4" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- Slide Two -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div
+            class="flex flex-col lg:flex-row lg:gap-20 p-10 lg:p-28 items-center"
+          >
+            <div class="space-y-7 lg:w-1/2">
+              <h1 class="text-6xl text-black font-bold lg:leading-[75px]">
+                Ride-on R15 V4 with Smile
+              </h1>
+              <p class="text-text-description-color leading-7">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button
+                class="btn bg-bike-primary text-white normal-case font-semibold hover:text-black"
+              >
+                Purchase
+              </button>
+            </div>
+            <div class="lg:w-1/2">
+              <img src="/images/slider/bike2.png" class="lg:w-3/4" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- Slide Three -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div
+            class="flex flex-col lg:flex-row lg:gap-20 p-10 lg:p-28 items-center"
+          >
+            <div class="space-y-7 lg:w-1/2">
+              <h1 class="text-6xl text-black font-bold lg:leading-[75px]">
+                Ride-on R15 V4 with Smile
+              </h1>
+              <p class="text-text-description-color leading-7">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button
+                class="btn bg-bike-primary text-white normal-case font-semibold hover:text-black"
+              >
+                Purchase
+              </button>
+            </div>
+            <div class="lg:w-1/2">
+              <img src="/images/slider/bike3.png" class="lg:w-3/4" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- Slide Four -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div
+            class="flex flex-col lg:flex-row lg:gap-20 p-10 lg:p-28 items-center"
+          >
+            <div class="space-y-7 lg:w-1/2">
+              <h1 class="text-6xl text-black font-bold lg:leading-[75px]">
+                Ride-on R15 V4 with Smile
+              </h1>
+              <p class="text-text-description-color leading-7">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button
+                class="btn bg-bike-primary text-white normal-case font-semibold hover:text-black"
+              >
+                Purchase
+              </button>
+            </div>
+            <div class="lg:w-1/2">
+              <img src="/images/slider/bike4.png" class="lg:w-3/4" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle btn-outline">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="container mx-auto px-4">
+      <section class="pt-32"></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
