--- a/index.html
+++ b/index.html
@@ -203,6 +203,90 @@
       </div>
     </header>
     <main class="container mx-auto px-4">
+      <!-- Feature Bike -->
+      <section class="pt-32">
+        <!-- feature bike section goes here -->
+      </section>
+      <!-- Latest Bike -->
+      <section class="pt-32">
+        <h3 class="text-5xl text-black font-semibold text-center mb-12">
+          Latest News
+        </h3>
+        <!-- Card Continer -->
+        <div
+          class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center"
+        >
+          <!-- Card One -->
+          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+            <figure>
+              <img src="/images/others/latest1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-semibold leading-9">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p class="text-[#6C6C6C] text-base font-normal leading-8">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn normal-case bg-bike-primary text-white text-lg font-medium hover:text-black"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Card Two -->
+          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+            <figure>
+              <img src="/images/others/latest2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-semibold leading-9">
+                Motorcycles & Scooters
+              </h2>
+              <p class="text-[#6C6C6C] text-base font-normal leading-8">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn normal-case bg-bike-primary text-white text-lg font-medium hover:text-black"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Card Three -->
+          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+            <figure>
+              <img src="/images/others/latest3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-semibold leading-9">
+                2021 Honda CBR500R
+              </h2>
+              <p class="text-[#6C6C6C] text-base font-normal leading-8">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions justify-start">
+                <button
+                  class="btn normal-case bg-bike-primary text-white text-lg font-medium hover:text-black"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Happy Client Section -->
+      <section class="pt-32"></section>
+      <!-- FAQ SEction -->
       <section class="pt-32"></section>
     </main>
     <footer></footer>
