Happy client section added

--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@
           class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center"
         >
           <!-- Card One -->
-          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+          <div
+            class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
+          >
             <figure>
               <img src="/images/others/latest1.png" alt="Shoes" />
             </figure>
@@ -239,7 +241,9 @@
             </div>
           </div>
           <!-- Card Two -->
-          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+          <div
+            class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
+          >
             <figure>
               <img src="/images/others/latest2.png" alt="Shoes" />
             </figure>
@@ -261,7 +265,9 @@
             </div>
           </div>
           <!-- Card Three -->
-          <div class="card bg-base-100 shadow-lg hover:shadow-xl transition">
+          <div
+            class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
+          >
             <figure>
               <img src="/images/others/latest3.png" alt="Shoes" />
             </figure>
@@ -285,7 +291,154 @@
         </div>
       </section>
       <!-- Happy Client Section -->
-      <section class="pt-32"></section>
+      <section class="pt-32">
+        <h3 class="text-5xl text-black font-semibold text-center mb-12">
+          Happy <span class="text-[#E76F51]">Clients says</span>
+        </h3>
+        <!-- Client Card Container -->
+        <div
+          class="grid gap-11 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 justify-items-center"
+        >
+          <!-- First Client Card -->
+          <div
+            class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
+          >
+            <figure>
+              <img class="w-36" src="/images/others/user-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body space-y-4">
+              <p class="text-[#6C6C6C] text-base font-normal leading-6">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4">
+                <h3 class="text-sky-400 text-sm font-semibold">Regina Miles</h3>
+                <p class="text-black text-sm font-semibold">Banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- Second Client Card -->
+          <div
+            class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
+          >
+            <figure>
+              <img class="w-36" src="/images/others/user-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body space-y-4">
+              <p class="text-[#6C6C6C] text-base font-normal leading-6">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4">
+                <h3 class="text-sky-400 text-sm font-semibold">Regina Miles</h3>
+                <p class="text-black text-sm font-semibold">Banker</p>
+              </div>
+            </div>
+          </div>
+          <!-- Third Client Card -->
+          <div
+            class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
+          >
+            <figure>
+              <img class="w-36" src="/images/others/user-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body space-y-4">
+              <p class="text-[#6C6C6C] text-base font-normal leading-6">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4">
+                <h3 class="text-sky-400 text-sm font-semibold">Regina Miles</h3>
+                <p class="text-black text-sm font-semibold">Banker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- FAQ SEction -->
       <section class="pt-32"></section>
     </main>
