FAQ responsive and litttle twick

--- a/index.html
+++ b/index.html
@@ -445,13 +445,17 @@
           Frequently<span class="text-[#E76F51]"> Asked Questions</span>
         </h3>
         <!-- Container -->
-        <div class="flex items-center">
+        <div class="flex flex-col lg:flex-row items-center">
           <!-- Image -->
-          <div class="flex-1">
-            <img class="w-3/6" src="./images/others/faq.png" alt="" />
+          <div class="lg:w-1/2">
+            <img
+              class="lg:w-2/4 lg:pl-28 mb-5"
+              src="./images/others/faq.png"
+              alt=""
+            />
           </div>
           <!-- FAQ -->
-          <div class="flex-1">
+          <div class="lg:w-1/2">
             <div class="collapse collapse-arrow bg-base-200">
               <input type="radio" name="my-accordion-2" checked="checked" />
               <div class="collapse-title text-xl font-medium">
@@ -512,8 +516,6 @@
           </div>
         </div>
       </section>
-
-      <section class="pt-32"></section>
     </main>
     <footer></footer>
   </body>
