--- a/index.html
+++ b/index.html
@@ -517,6 +517,21 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer
+      class="flex justify-between items-center footer p-10 bg-neutral text-neutral-content mt-32"
+    >
+      <div class="container mx-auto flex justify-between items-center">
+        <div>
+          <p>Imran Industries Ltd.<br />Providing reliable tech since 1992</p>
+        </div>
+        <div>
+          <span class="footer-title">Social</span>
+          <div class="grid grid-cols-1 gap-4">
+            <a><img class="w-36" src="./images/others/android.png" alt="" /></a>
+            <a><img class="w-36" src="./images/others/ios.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
