Feature bike added

--- a/index.html
+++ b/index.html
@@ -205,7 +205,33 @@
     <main class="container mx-auto px-4">
       <!-- Feature Bike -->
       <section class="pt-32">
-        <!-- feature bike section goes here -->
+        <!-- Container -->
+        <div>
+          <!-- Content -->
+          <div class="text-center mb-5">
+            <h3 class="text-5xl text-black font-semibold">
+              Fetured Bikes In This Year
+            </h3>
+            <span
+              class="text-bike-primary text-sm font-semibold border-b-2 border-bike-primary"
+            >
+              Best bike collection
+            </span>
+          </div>
+          <!-- Image -->
+          <div
+            class="flex flex-col items-center lg:flex-row gap-5 justify-between"
+          >
+            <img class="w-72" src="./images/Feature/1.png" alt="" />
+            <img class="w-72" src="./images/Feature/2.png" alt="" />
+            <img class="w-72" src="./images/Feature/3.png" alt="" />
+          </div>
+        </div>
+        <!-- <img
+          class="flex justify-center"
+          src="./images/others/border.svg"
+          alt=""
+        /> -->
       </section>
       <!-- Latest Bike -->
       <section class="pt-32">
