Image path fixed, now taht will show on live site

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </button>
             </div>
             <div class="lg:w-1/2">
-              <img src="/images/slider/bike1.png" class="lg:w-3/4" />
+              <img src="./images/slider/bike1.png" class="lg:w-3/4" />
             </div>
           </div>
           <div
@@ -130,7 +130,7 @@
               </button>
             </div>
             <div class="lg:w-1/2">
-              <img src="/images/slider/bike2.png" class="lg:w-3/4" />
+              <img src="./images/slider/bike2.png" class="lg:w-3/4" />
             </div>
           </div>
           <div
@@ -160,7 +160,7 @@
               </button>
             </div>
             <div class="lg:w-1/2">
-              <img src="/images/slider/bike3.png" class="lg:w-3/4" />
+              <img src="./images/slider/bike3.png" class="lg:w-3/4" />
             </div>
           </div>
           <div
@@ -190,7 +190,7 @@
               </button>
             </div>
             <div class="lg:w-1/2">
-              <img src="/images/slider/bike4.png" class="lg:w-3/4" />
+              <img src="./images/slider/bike4.png" class="lg:w-3/4" />
             </div>
           </div>
           <div
@@ -247,7 +247,7 @@
             class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
           >
             <figure>
-              <img src="/images/others/latest1.png" alt="Shoes" />
+              <img src="./images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold leading-9">
@@ -271,7 +271,7 @@
             class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
           >
             <figure>
-              <img src="/images/others/latest2.png" alt="Shoes" />
+              <img src="./images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold leading-9">
@@ -295,7 +295,7 @@
             class="card w-96 lg:w-auto bg-base-100 shadow-lg hover:shadow-xl transition"
           >
             <figure>
-              <img src="/images/others/latest3.png" alt="Shoes" />
+              <img src="./images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-3xl font-semibold leading-9">
@@ -330,7 +330,7 @@
             class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
           >
             <figure>
-              <img class="w-36" src="/images/others/user-1.png" alt="Shoes" />
+              <img class="w-36" src="./images/others/user-1.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-4">
               <p class="text-[#6C6C6C] text-base font-normal leading-6">
@@ -376,7 +376,7 @@
             class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
           >
             <figure>
-              <img class="w-36" src="/images/others/user-2.png" alt="Shoes" />
+              <img class="w-36" src="./images/others/user-2.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-4">
               <p class="text-[#6C6C6C] text-base font-normal leading-6">
@@ -422,7 +422,7 @@
             class="card w-96 lg:w-auto bg-base-100 p-9 border border-gray-400"
           >
             <figure>
-              <img class="w-36" src="/images/others/user-3.png" alt="Shoes" />
+              <img class="w-36" src="./images/others/user-3.png" alt="Shoes" />
             </figure>
             <div class="card-body space-y-4">
               <p class="text-[#6C6C6C] text-base font-normal leading-6">
